# gmol-core

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  pyproject.toml
.github/: codecov.yml  dependabot.yml  release.yml
.github/workflows/: lint-test.yml  release.yml
docs/: conf.py  index.rst
src/gmol/base/data/mmcif/: assembly.py  filter.py  input.py  parse.py  smiles.py
src/gmol/base/data/seq/: colabfold_input.py  mmseqs_search.py
src/gmol/base/wrapper/: rdkit.py
src/gmol/core/: __init__.py  path.py  types.py
src/gmol/core/const/: __init__.py  af2.py  af3.py  seoklab.py
src/gmol/core/data/mmcif/: __init__.py  assembly.py  filter.py  input.py  parse.py  smiles.py  write.py
src/gmol/core/data/seq/: hhsearch_template.py  mmseqs_cluster.py  mmseqs_search.py
src/gmol/core/wrapper/: rdkit.py
tests/: conftest.py
tests/data/mmcif/: conftest.py  filter_test.py  input_test.py  load_test.py  pdb_test.py  save_test.py  smiles_test.py
tests/test_data/ccd/: components_0IE.cif  components_min.json
tests/test_data/ligands/: 5dwr_ligand.sdf  8a0b_ligand.mol2  8a0b_ligand.sdf  ligands.mol2
tests/test_data/mmcif/: 3m8z.cif  4hf7.cif  7qgw.cif
tests/wrapper/: rdkit_test.py
